borsh/tests/snapshots/test_generic_struct__generic_associated_type_field.snap
---
source: borsh/tests/test_generic_struct.rs
expression: data
---
[
    5,
    0,
    0,
    0,
    118,
    97,
    108,
    117,
    101,
    5,
    0,
    0,
    0,
    102,
    105,
    101,
    108,
    100,
]
