borsh/tests/snapshots/test_generic_struct__generic_enum.snap
---
source: borsh/tests/test_generic_struct.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    3,
    0,
    0,
    0,
    116,
    119,
    111,
    5,
    0,
    0,
    0,
    116,
    104,
    114,
    101,
    101,
    1,
    172,
    4,
    10,
    0,
    0,
    0,
    0,
    0,
]
