borsh/tests/snapshots/test_generic_struct__generic_struct.snap
---
source: borsh/tests/test_generic_struct.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    102,
    111,
    111,
    3,
    0,
    0,
    0,
    98,
    97,
    114,
    5,
    0,
    0,
    0,
    119,
    111,
    114,
    108,
    100,
    0,
    2,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    101,
    114,
    114,
    111,
    114,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
